done stop watch

--- a/StopWatch/css/style.css
+++ b/StopWatch/css/style.css
@@ -64,6 +64,11 @@ body {
     color: white;
 }
 
+.display_time span {
+    display: inline-block;
+    width: 100px;
+}
+
 .reset,
 .stop,
 .start {
