--- a/Calc/css/calc.css
+++ b/Calc/css/calc.css
@@ -1,37 +1,117 @@
 *,
 *:before,
 *:after {
-  box-sizing: border-box;
+    box-sizing: border-box;
 }
 * {
-  margin: 0;
-  padding: 0;
-  font: inherit;
+    margin: 0;
+    padding: 0;
+    font: inherit;
 }
 img,
 picture,
 svg,
 video {
-  display: block;
-  max-width: 100%;
+    display: block;
+    max-width: 100%;
 }
 input,
 select,
 textarea {
-  background-color: transparent;
-  outline: none;
+    background-color: transparent;
+    outline: none;
 }
 button {
-  cursor: pointer;
-  background-color: transparent;
-  outline: none;
-  border: 0;
+    cursor: pointer;
+    background-color: transparent;
+    outline: none;
+    border: 0;
 }
 body {
-  min-height: 100vh;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 1;
+    min-height: 100vh;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1;
 }
 
+.app {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    background-color: #ccc;
+}
 
+.calculator {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    max-width: 375px;
+    min-height: 640px;
+    border-radius: 20px;
+    background-color: rgba(10, 10, 10, 0.816);
+    overflow: hidden;
+}
+
+.display {
+    min-height: 200px;
+    padding: 1.5rem;
+    background-color: rgba(10, 10, 10, 0);
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-end;
+    text-align: right;
+    flex: 1 1 0%;
+    color: white;
+}
+
+.input {
+    font-size: 1.25rem;
+}
+
+.output {
+    font-size: 3rem;
+    font-weight: 700;
+}
+
+.operator {
+    color: #eb6666;
+}
+
+.keys .key.operator span {
+    color: #eb6666;
+}
+
+.keys .key.action span {
+    color: aqua;
+}
+
+.keys {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(5, 1fr);
+    padding: 1.5rem;
+    gap: 1rem;
+    font-size: 1.5rem;
+    border-radius: 1.5rem 1.5rem 0 0;
+    background-color: rgba(82, 80, 80, 0.486);
+}
+
+.keys .key {
+    position: relative;
+    height: 0;
+    padding-top: 100%;
+    background-color: #262933;
+    border-radius: 50%;
+    cursor: pointer;
+}
+
+.keys .key span {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: #fff;
+    font-size: 2rem;
+    font-weight: 700;
+}
